[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "stable-baselines3>=2.3.2",
    "sb3-contrib>=2.3.0",
    "gymnasium>=0.29.1", 
    "numpy>=1.26.4",
    "torch>=2.3.1",
    "lib_programname>=2.0.9",
    "matplotlib",
    "tensorboard",
    "scipy",
    "tqdm",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
 